--- a/style.css
+++ b/style.css
@@ -2,7 +2,76 @@ body {
   width: 100%;
   margin: 0 auto;
   text-align: center;
+  background-color: #f2f4f6;
 }
 
-.date-picker {
+.calendar {
+  --calendar-width-size: 300px;
+  --calenadar-font-size: 16px;
+  margin-top: 10px;
+}
+.calendar-container {
+  width: var(--calendar-width-size);
+  font-size: var(--calenadar-font-size);
+  background-color: white;
+  margin: auto;
+  border-radius: 15px;
+  box-shadow: 0 0 15px #a5a5a5;
+}
+
+.calendar-nav {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  align-items: center;
+  background-color: #3bba6d;
+  color: white;
+  border-radius: 10px 10px 0 0;
+}
+
+.nav-month-year {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
+
+.prev,
+.next {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+.prev::after {
+  content: '';
+  width: 0;
+  height: 0;
+  border-top: 5px solid transparent; /* 왼쪽 삼각형부분 */
+  border-bottom: 5px solid transparent; /* 왼쪽 삼각형부분 */
+  border-right: 5px solid white; /* 아래쪽 삼각형부분 */
+  border-left: 5px solid transparent; /* 오른쪽 삼각형부분 */
+  position: relative;
+  margin-left: 5px;
+}
+.next::after {
+  content: '';
+  width: 0;
+  height: 0;
+  border-top: 5px solid transparent; /* 왼쪽 삼각형부분 */
+  border-bottom: 5px solid transparent; /* 왼쪽 삼각형부분 */
+  border-right: 5px solid transparent; /* 오른쪽 삼각형부분 */
+  border-left: 5px solid white; /* 아래쪽 삼각형부분 */
+  position: relative;
+  margin-left: 5px;
+}
+
+.calendar-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
 }
